vlib/v/parser/tests/const_decl_err.vv
fn foo() (int, int, int) {
	return 1, 2, 3
}

const (
	a, b, c = foo()
)


fn main() {
	println("$a $b $c")
}
